src/vs/editor/contrib/suggest/browser/suggest.css
/* ... */
.monaco-editor .suggest-widget .monaco-list .monaco-list-row .icon.interface { background-image: url('Interface_16x.svg'); }
.monaco-editor .suggest-widget .monaco-list .monaco-list-row .icon.module { background-image: url('Namespace_16x.svg'); }
.monaco-editor .suggest-widget .monaco-list .monaco-list-row .icon.property { background-image: url('Property_16x.svg'); }
.monaco-editor .suggest-widget .monaco-list .monaco-list-row .icon.unit { background-image: url('Ruler_16x.svg'); }
.monaco-editor .suggest-widget .monaco-list .monaco-list-row .icon.value,
.monaco-editor .suggest-widget .monaco-list .monaco-list-row .icon.enum { background-image: url('EnumItem_16x.svg'); }
.monaco-editor .suggest-widget .monaco-list .monaco-list-row .icon.keyword { background-image: url('IntelliSenseKeyword_16x.svg'); }
.monaco-editor .suggest-widget .monaco-list .monaco-list-row .icon.text { background-image: url('String_16x.svg'); }
.monaco-editor .suggest-widget .monaco-list .monaco-list-row .icon.color { background-image: url('ColorPalette_16x.svg'); }
.monaco-editor .suggest-widget .monaco-list .monaco-list-row .icon.file { background-image: url('Document_16x.svg'); }
.monaco-editor .suggest-widget .monaco-list .monaco-list-row .icon.reference { background-image: url('Enumerator_16x.svg'); }
.monaco-editor .suggest-widget .monaco-list .monaco-list-row .icon.snippet { background-image: url('Snippet_16x.svg'); }
.monaco-editor .suggest-widget .monaco-list .monaco-list-row .icon.customcolor { background-image: none; }
.monaco-editor .suggest-widget .monaco-list .monaco-list-row .icon.folder { background-image: url('Folder_16x.svg'); }

.monaco-editor .suggest-widget .monaco-list .monaco-list-row .icon.customcolor .colorspan {
	margin: 0 0 0 0.3em;
	border: 0.1em solid #000;
	width: 0.7em;
	height: 0.7em;
	display: inline-block;
}

.monaco-editor .suggest-widget .details {
	height: 100%;
	box-sizing: border-box;
	display: flex;
	flex-direction: column;
	cursor: default;
}

.monaco-editor .suggest-widget .details > .header {
	padding: 4px 5px;
	display: flex;
	box-sizing: border-box;
	border-bottom: 1px solid rgba(204, 204, 204, 0.5);
}

.monaco-editor .suggest-widget .details > .header > .title {
	flex: 2;
}

.monaco-editor .suggest-widget .details > .header > .go-back {
	cursor: pointer;
	opacity: 0.6;
	background-image: url('./back.svg');
	background-size: 70%;
	background-position: center center;
	background-repeat: no-repeat;
}

.monaco-editor .suggest-widget .details > .header > .go-back:hover {
	opacity: 1;
}

.monaco-editor .suggest-widget .details > .monaco-scrollable-element {
	flex: 1;
}

.monaco-editor .suggest-widget .details > .monaco-scrollable-element > .body {
	position: absolute;
	box-sizing: border-box;
	height: 100%;
	width: 100%;
	white-space: pre-wrap;
}

.monaco-editor .suggest-widget .details > .monaco-scrollable-element > .body > .type {
	opacity: 0.7;
}

.monaco-editor .suggest-widget .details > .monaco-scrollable-element > .body > p {
	margin: 0;
	padding: 4px 5px;
}

.monaco-editor .suggest-widget .details > .monaco-scrollable-element > .body > p:empty {
	display: none;
}

/* Dark theme */
.monaco-editor.vs-dark .suggest-widget {
	background-color: #2D2D30;
	border: 1px solid rgb(69, 69, 69);
}


.monaco-editor.vs-dark .suggest-widget .details > .header {
	border-color: rgba(85,85,85,0.5);
}

.monaco-editor.vs-dark .suggest-widget:not(.frozen) .monaco-highlighted-label .highlight {
	color: #219AE4;
}


.monaco-editor.vs-dark .suggest-widget .monaco-list .monaco-list-row .docs > .docs-details,
.monaco-editor.vs-dark .suggest-widget .details > .header > .go-back {
	color: #4E94CE;
}


/* High Contrast Theming */
.monaco-editor.hc-black .suggest-widget {
	background-color: #0C141F;
	border: 2px solid #6FC3DF;
}

.monaco-editor.hc-black .suggest-widget:not(.frozen) .monaco-highlighted-label .highlight {
	color: #219AE4;
}

.monaco-editor.hc-black .suggest-widget .details > .monaco-scrollable-element > .body > .docs,
.monaco-editor.hc-black .suggest-widget .monaco-list .monaco-list-row .docs {
	color: #C07A7A;
}

.monaco-editor.hc-black .suggest-widget .monaco-list .monaco-list-row .docs > .docs-details,
.monaco-editor.hc-black .suggest-widget .details > .header > .go-back {
	color: #4E94CE;
}

.monaco-editor.vs-dark .suggest-widget .monaco-list .monaco-list-row .icon,
.monaco-editor.hc-black .suggest-widget .monaco-list .monaco-list-row .icon { background-image: url('Misc_inverse_16x.svg'); }

.monaco-editor.vs-dark .suggest-widget .monaco-list .monaco-list-row .icon.method,
.monaco-editor.hc-black .suggest-widget .monaco-list .monaco-list-row .icon.method,
.monaco-editor.vs-dark .suggest-widget .monaco-list .monaco-list-row .icon.function,
.monaco-editor.hc-black .suggest-widget .monaco-list .monaco-list-row .icon.function,
.monaco-editor.vs-dark .suggest-widget .monaco-list .monaco-list-row .icon.constructor,
.monaco-editor.hc-black .suggest-widget .monaco-list .monaco-list-row .icon.constructor { background-image: url('Method_inverse_16x.svg'); }

.monaco-editor.vs-dark .suggest-widget .monaco-list .monaco-list-row .icon.field,
.monaco-editor.hc-black .suggest-widget .monaco-list .monaco-list-row .icon.field,
.monaco-editor.vs-dark .suggest-widget .monaco-list .monaco-list-row .icon.variable,
.monaco-editor.hc-black .suggest-widget .monaco-list .monaco-list-row .icon.variable { background-image: url('Field_inverse_16x.svg'); }

.monaco-editor.vs-dark .suggest-widget .monaco-list .monaco-list-row .icon.class,
.monaco-editor.hc-black .suggest-widget .monaco-list .monaco-list-row .icon.class { background-image: url('Class_inverse_16x.svg'); }

.monaco-editor.vs-dark .suggest-widget .monaco-list .monaco-list-row .icon.interface,
.monaco-editor.hc-black .suggest-widget .monaco-list .monaco-list-row .icon.interface { background-image: url('Interface_inverse_16x.svg'); }
/* ... */

